--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ django-cors-headers==3.10.0
 djangorestframework==3.12.4
 pytz==2021.3
 sqlparse==0.4.2
-drf-yasg==1.20.0
+drf-spectacular==0.21.0
 djangorestframework-simplejwt==5.0.0
