--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-asgiref==3.4.1
-Django==3.2.9
-django-cors-headers==3.10.0
-djangorestframework==3.12.4
-pytz==2021.3
-sqlparse==0.4.2
-drf-spectacular==0.21.0
+asgiref==3.5.0
+attrs==21.4.0
+dj-database-url==0.5.0
+django-cors-headers==3.11.0
+django==4.0.1
 djangorestframework-simplejwt==5.0.0
+djangorestframework==3.13.1
+drf-spectacular==0.21.1
+gunicorn==20.1.0
+inflection==0.5.1
+jsonschema==4.4.0
+psycopg2==2.9.3
+pyjwt==2.3.0
+pyrsistent==0.18.1
+python-decouple==3.5
+pytz==2021.3
+pyyaml==6.0
+sqlparse==0.4.2
+uritemplate==4.1.1
+whitenoise==5.3.0
